added manual trigger
